--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,33 @@
-<!DOCTYPE html>
-<html>
-<body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <title>Main Page</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+  </head>
+  <body>
+  	<button type="button" class="btn btn btn-success" style="position: relative; top: 300px;left: 00px;width: 300px;height: 300px;padding-bottom: 50px; font-size : 40px; ">Upload</button>
+  	<div style="margin:5px 10px 15px 900px">
+		<p>Related Article</p>
+	</div>
+	<div class="wiki_group" style="margin:15px 40px 15px 900px">
+	  <a href="#" class="list-group-item">First item</a>
+	  <a href="#" class="list-group-item">Second item</a>
+	  <a href="#" class="list-group-item">Third item</a>
+	</div>
+	<div style="margin:65px 10px 15px 900px">
+		<p>Recommend</p>
+	</div>
+	<div class="recommend_group" style="margin:15px 10px 15px 900px">
+	  <a href="#" class="list-group-item">First item</a>
+	  <a href="#" class="list-group-item">Second item</a>
+	  <a href="#" class="list-group-item">Third item</a>
+	</div>
 
-<p>Error</p>
-
-<button onclick="myFunction()">Try it</button>
-
-<script>
-function myFunction() {
-    alert("Invalid Value");
-    window.location = "http://localhost:8111"
-}
-</script>
-
-</body>
+	 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+	    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+   </body>
 </html>
