--- a/templates/index.html
+++ b/templates/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
 
-	<form action="/uploader" method=post enctype=multipart/form-data>
+	<form action="/uploader" method=post enctype=multipart/form-data style="position: relative; top: 300px;left: 200px;">
       <p><input type=file name=file>
-         <input type=submit value=Upload>
+         <input class="btn btn btn-success" type=submit value=Upload></p>
     </form>
 
   	<div style="margin:5px 10px 15px 900px">
